--- a/category.html
+++ b/category.html
@@ -207,66 +207,66 @@
                     </div>
 
 
-                <div class="row">
-                    <div class="col-md-12 col-sm-12 col-xs-12">
-                        <div class="x_panel">
-                            <div class="x_title">
-                                <h2>Update Category</h2>
-                                <ul class="nav navbar-right panel_toolbox">
-                                    <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                                    </li>
-                                    <li class="dropdown">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
-                                        <ul class="dropdown-menu" role="menu">
-                                            <li><a href="#">Settings 1</a>
-                                            </li>
-                                            <li><a href="#">Settings 2</a>
-                                            </li>
-                                        </ul>
-                                    </li>
-                                    <li><a class="close-link"><i class="fa fa-close"></i></a>
-                                    </li>
-                                </ul>
-                                <div class="clearfix"></div>
-                            </div>
-                            <div class="x_content">
-                                <br />
-                                <form id="update-category-form" class="form-horizontal form-label-left" data-parsley-validate novalidate method="post">
+                <!--<div class="row">-->
+                    <!--<div class="col-md-12 col-sm-12 col-xs-12">-->
+                        <!--<div class="x_panel">-->
+                            <!--<div class="x_title">-->
+                                <!--<h2>Update Category</h2>-->
+                                <!--<ul class="nav navbar-right panel_toolbox">-->
+                                    <!--<li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>-->
+                                    <!--</li>-->
+                                    <!--<li class="dropdown">-->
+                                        <!--<a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>-->
+                                        <!--<ul class="dropdown-menu" role="menu">-->
+                                            <!--<li><a href="#">Settings 1</a>-->
+                                            <!--</li>-->
+                                            <!--<li><a href="#">Settings 2</a>-->
+                                            <!--</li>-->
+                                        <!--</ul>-->
+                                    <!--</li>-->
+                                    <!--<li><a class="close-link"><i class="fa fa-close"></i></a>-->
+                                    <!--</li>-->
+                                <!--</ul>-->
+                                <!--<div class="clearfix"></div>-->
+                            <!--</div>-->
+                            <!--<div class="x_content">-->
+                                <!--<br />-->
+                                <!--<form id="update-category-form" class="form-horizontal form-label-left" data-parsley-validate novalidate method="post">-->
 
-                                    <div class="form-group">
-                                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="update-category-code">Category Code</label>
-                                        <div class="col-md-6 col-sm-6 col-xs-12">
-                                            <input type="text" id="update-category-code" readonly class="form-control col-md-7 col-xs-12" name="update-category-code" autocomplete="off">
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="update-category-name">Category Name <span class="required">*</span>
-                                        </label>
-                                        <div class="col-md-6 col-sm-6 col-xs-12">
-                                            <input type="text" id="update-category-name" name="update-category-name" required="required" class="form-control col-md-7 col-xs-12" autocomplete="off">
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="update-category-remarks" class="control-label col-md-3 col-sm-3 col-xs-12">Remarks</label>
-                                        <div class="col-md-6 col-sm-6 col-xs-12">
-                                            <textarea id="update-category-remarks" class="form-control col-md-7 col-xs-12" type="text" name="update-category-remarks"></textarea>
-                                        </div>
-                                    </div>
+                                    <!--<div class="form-group">-->
+                                        <!--<label class="control-label col-md-3 col-sm-3 col-xs-12" for="update-category-code">Category Code</label>-->
+                                        <!--<div class="col-md-6 col-sm-6 col-xs-12">-->
+                                            <!--<input type="text" id="update-category-code" readonly class="form-control col-md-7 col-xs-12" name="update-category-code" autocomplete="off">-->
+                                        <!--</div>-->
+                                    <!--</div>-->
+                                    <!--<div class="form-group">-->
+                                        <!--<label class="control-label col-md-3 col-sm-3 col-xs-12" for="update-category-name">Category Name <span class="required">*</span>-->
+                                        <!--</label>-->
+                                        <!--<div class="col-md-6 col-sm-6 col-xs-12">-->
+                                            <!--<input type="text" id="update-category-name" name="update-category-name" required="required" class="form-control col-md-7 col-xs-12" autocomplete="off">-->
+                                        <!--</div>-->
+                                    <!--</div>-->
+                                    <!--<div class="form-group">-->
+                                        <!--<label for="update-category-remarks" class="control-label col-md-3 col-sm-3 col-xs-12">Remarks</label>-->
+                                        <!--<div class="col-md-6 col-sm-6 col-xs-12">-->
+                                            <!--<textarea id="update-category-remarks" class="form-control col-md-7 col-xs-12" type="text" name="update-category-remarks"></textarea>-->
+                                        <!--</div>-->
+                                    <!--</div>-->
 
-                                    <div class="ln_solid"></div>
-                                    <div class="form-group">
-                                        <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
-                                            <button class="btn btn-primary" type="button">Cancel</button>
-                                            <button class="btn btn-primary" type="reset">Reset</button>
-                                            <button type="submit" class="btn btn-success" id="update-category-submit" name="update-category-submit">Submit</button>
-                                        </div>
-                                    </div>
+                                    <!--<div class="ln_solid"></div>-->
+                                    <!--<div class="form-group">-->
+                                        <!--<div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">-->
+                                            <!--<button class="btn btn-primary" type="button">Cancel</button>-->
+                                            <!--<button class="btn btn-primary" type="reset">Reset</button>-->
+                                            <!--<button type="submit" class="btn btn-success" id="update-category-submit" name="update-category-submit">Submit</button>-->
+                                        <!--</div>-->
+                                    <!--</div>-->
 
-                                </form>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+                                <!--</form>-->
+                            <!--</div>-->
+                        <!--</div>-->
+                    <!--</div>-->
+                <!--</div>-->
 
                 <div class="row">
                     <div class="col-md-12 col-sm-12 col-xs-12">
@@ -344,7 +344,6 @@
 
 
             </div>
-<
             <!-- /page content -->
 
             <!-- footer content -->
