--- a/employee_allowance.html
+++ b/employee_allowance.html
@@ -27,6 +27,8 @@
     <link href="vendors/starrr/dist/starrr.css" rel="stylesheet">
     <!-- bootstrap-daterangepicker -->
     <link href="vendors/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet">
+    <!-- Dropzone.js -->
+    <link href="vendors/dropzone/dist/min/dropzone.min.css" rel="stylesheet">
 
     <!-- Custom Theme Style -->
     <link href="build/css/custom.css" rel="stylesheet">
@@ -131,7 +133,7 @@
             <div class="">
                 <div class="page-title">
                     <div class="title_left">
-                        <h3>Items</h3>
+                        <h3>Employee</h3>
                     </div>
 
                     <div class="title_right">
@@ -150,18 +152,9 @@
                     <div class="col-md-12 col-sm-12 col-xs-12">
                         <div class="x_panel">
                             <div class="x_title">
-                                <h2>Items<small>Adding or Update Items</small></h2>
+                                <h2>Employee Allowance<small>Daily Employee Allowance</small></h2>
                                 <ul class="nav navbar-right panel_toolbox">
                                     <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
-                                    </li>
-                                    <li class="dropdown">
-                                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
-                                        <ul class="dropdown-menu" role="menu">
-                                            <li><a href="#">Settings 1</a>
-                                            </li>
-                                            <li><a href="#">Settings 2</a>
-                                            </li>
-                                        </ul>
                                     </li>
                                     <li><a class="close-link"><i class="fa fa-close"></i></a>
                                     </li>
@@ -169,77 +162,31 @@
                                 <div class="clearfix"></div>
                             </div>
                             <div class="x_content">
-                                <br />
-                                <form id="subcategory_form" data-parsley-validate class="form-horizontal form-label-left">
+                                <div class="row">
+                                    <div class="col-md-3 text-right pull-right">
+                                        <h4 id="showDate"></h4>
+                                    </div>
+                                </div>
 
-                                    <div class="form-group">
-                                        <label for="category-select" class="control-label col-md-3 col-sm-3 col-xs-12">Category</label>
-                                        <div class="col-md-6 col-sm-6 col-xs-12">
-                                            <select class="form-control" id="category-select">
-                                                <option>Choose option</option>
-                                                <option>Option one</option>
-                                                <option>Option two</option>
-                                                <option>Option three</option>
-                                                <option>Option four</option>
-                                            </select>
-                                        </div>
-                                    </div>
+                                <div class="table-responsive">
+                                    <table class="table table-striped table-bordered" id="empViewTable">
+                                        <thead>
+                                            <tr>
+                                                <th style="display: none;" class="text-center">#</th>
+                                                <th class="text-center">Photo</th>
+                                                <th width="20%;">Code</th>
+                                                <th>Name</th>
+                                                <th class="text-center">Money (Rs)</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
 
-                                    <div class="form-group">
-                                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="item-code">Item Code</label>
-                                        <div class="col-md-6 col-sm-6 col-xs-12">
-                                            <input type="number" id="item-code"  class="form-control col-md-7 col-xs-12" name="item-code">
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="item-name">Item Name <span class="required">*</span>
-                                        </label>
-                                        <div class="col-md-6 col-sm-6 col-xs-12">
-                                            <input type="text" id="item-name" name="item-name" required="required" class="form-control col-md-7 col-xs-12">
-                                        </div>
-                                    </div>
-                                    <div class="form-group">
-                                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="tailoring-amount">Tailoring Amount <span class="required">*</span>
-                                        </label>
-                                        <div class="col-md-6 col-sm-6 col-xs-12">
-                                            <input type="text" id="tailoring-amount" name="tailoring-amount" required="required" class="form-control col-md-7 col-xs-12">
-                                        </div>
-                                    </div>
+                                        </tbody>
 
-                                    <div class="form-group">
-                                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="item-link">Item Link With<span class="required">*</span>
-                                        </label>
-                                        <div class="col-md-6 col-sm-6 col-xs-12">
-                                            <input type="text" id="item-link" name="item-link" required="required" class="form-control col-md-7 col-xs-12">
-                                        </div>
-                                    </div>
+                                    </table>
+                                </div>
 
 
-                                    <div class="form-group">
-                                        <label class="control-label col-md-3 col-sm-3 col-xs-12" for="item-price">Item Price<span class="required">*</span>
-                                        </label>
-                                        <div class="col-md-6 col-sm-6 col-xs-12">
-                                            <input type="text" id="item-price" name="item-price" required="required" class="form-control col-md-7 col-xs-12">
-                                        </div>
-                                    </div>
-
-                                    <div class="form-group">
-                                        <label for="subcategory-remarks" class="control-label col-md-3 col-sm-3 col-xs-12">Remarks</label>
-                                        <div class="col-md-6 col-sm-6 col-xs-12">
-                                            <textarea id="subcategory-remarks" class="form-control col-md-7 col-xs-12" type="text" name="subcategory-remarks"></textarea>
-                                        </div>
-                                    </div>
-
-                                    <div class="ln_solid"></div>
-                                    <div class="form-group">
-                                        <div class="col-md-6 col-sm-6 col-xs-12 col-md-offset-3">
-                                            <button class="btn btn-primary" type="button">Cancel</button>
-                                            <button class="btn btn-primary" type="reset">Reset</button>
-                                            <button type="submit" class="btn btn-success">Submit</button>
-                                        </div>
-                                    </div>
-
-                                </form>
                             </div>
                         </div>
                     </div>
@@ -297,8 +244,63 @@
 <script src="vendors/devbridge-autocomplete/dist/jquery.autocomplete.min.js"></script>
 <!-- starrr -->
 <script src="vendors/starrr/dist/starrr.js"></script>
+<!-- Dropzone.js -->
+<script src="vendors/dropzone/dist/min/dropzone.min.js"></script>
+<!-- validator -->
+<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.17.0/dist/jquery.validate.min.js"></script>
+<!-- Jquery-table-edit -->
+<script src="vendors/jquery-table-edit/jquery.tabledit.min.js"></script>
 <!-- Custom Theme Scripts -->
 <script src="build/js/custom.min.js"></script>
+<script src="build/js/main.js"></script>
+<script>
+
+    var d = new Date();
+
+    var month = d.getMonth()+1;
+    var day = d.getDate();
+
+    var output = d.getFullYear() + '/' +
+        ((''+month).length<2 ? '0' : '') + month + '/' +
+        ((''+day).length<2 ? '0' : '') + day;
+    $("#showDate").html("Date: " + output);
+
+    // Table-Edit Configuration
+    $('#empViewTable').Tabledit({
+        url: 'build/submit/example.php',
+        editButton: false,
+        deleteButton: false,
+        hideIdentifier: true,
+        columns: {
+            identifier: [0, 'id'],
+            editable: [[3, 'empMoney']]
+        },
+        onDraw: function() {
+            $.ajax({
+                url:"build/submit/fetchEmployees.php",
+                method:"POST",
+                success:function (data) {
+                    $("#empViewTable tbody").html(data);
+                }
+            })
+        },
+        onAlways: function() {
+            $.ajax({
+                url:"build/submit/fetchEmployees.php",
+                method:"POST",
+                success:function (data) {
+                    $("#empViewTable tbody").html(data);
+                }
+            })
+        }
+
+
+    });
+
+
+
+
+</script>
 
 </body>
 </html>
