--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <link href="vendors/jqvmap/dist/jqvmap.min.css" rel="stylesheet"/>
     <!-- bootstrap-daterangepicker -->
     <link href="vendors/bootstrap-daterangepicker/daterangepicker.css" rel="stylesheet">
+      <!--Semantic-->
+      <link href="vendors/semantic/semantic.min.css" rel="stylesheet">
+      <link href="vendors/semantic/icon.min.css" rel="stylesheet">
 
     <!-- Custom Theme Style -->
     <link href="build/css/custom.css" rel="stylesheet">
@@ -45,11 +48,11 @@
             <!-- menu profile quick info -->
             <div class="profile clearfix">
               <div class="profile_pic">
-                <img src="images/img.jpg" alt="..." class="img-circle profile_img">
+                <img src="build/images/admin_avatar.png" alt="..." class="img-circle profile_img">
               </div>
               <div class="profile_info">
                 <span>Welcome,</span>
-                <h2>John Doe</h2>
+                <h2>Admin</h2>
               </div>
             </div>
             <!-- /menu profile quick info -->
@@ -67,6 +70,7 @@
                         <li><a href="items.html"><i class="fa fa-edit"></i>Items</a></li>
                         <li><a href="customer_registration.html"><i class="fa fa-edit"></i>Customer Registration</a></li>
                         <li><a href="employee_registration.html"><i class="fa fa-edit"></i>Employee Registration</a></li>
+                        <li><a href="employee_allowance.html"><i class="fa fa-edit"></i>Employee Allowance</a></li>
                     </ul>
                 </div>
 
@@ -103,7 +107,7 @@
                       <ul class="nav navbar-nav navbar-right">
                           <li class="">
                               <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                                  <img src="images/img.jpg" alt="">John Doe
+                                  <img src="build/images/admin_avatar.png" alt="">Admin
                                   <span class=" fa fa-angle-down"></span>
                               </a>
                               <ul class="dropdown-menu dropdown-usermenu pull-right">
@@ -128,7 +132,7 @@
         <div class="right_col" role="main">
           <!-- top tiles -->
           <div class="row ">
-            <div class="col-md-6 col-sm-6 col-xs-12 tile_stats_count">
+            <div class="col-md-6 col-sm-6 col-xs-12">
                 <div class="input-group">
                     <input type="text" class="form-control" placeholder="Search for customers">
                     <span class="input-group-btn">
@@ -137,13 +141,14 @@
                 </div>
             </div>
 
-              <div class="col-md-6 col-sm-6 col-xs-12 tile_stats_count">
-                  <div class="input-group">
-                      <input type="text" class="form-control" placeholder="Search for employees">
-                      <span class="input-group-btn">
-                      <button class="btn btn-default" type="button">Go!</button>
-                    </span>
+              <div class="col-md-6 col-sm-6 col-xs-12 text-center">
+                  <div class="ui search">
+                      <div class="ui center icon input input-group full-width">
+                          <input class="prompt" type="text" placeholder="Search Employees">
+                          <i class="search icon"></i>
+                      </div>
                   </div>
+
               </div>
 
 
@@ -299,15 +304,6 @@
                           <ul class="nav navbar-right panel_toolbox">
                               <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
                               </li>
-                              <li class="dropdown">
-                                  <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false"><i class="fa fa-wrench"></i></a>
-                                  <ul class="dropdown-menu" role="menu">
-                                      <li><a href="#">Settings 1</a>
-                                      </li>
-                                      <li><a href="#">Settings 2</a>
-                                      </li>
-                                  </ul>
-                              </li>
                               <li><a class="close-link"><i class="fa fa-close"></i></a>
                               </li>
                           </ul>
@@ -315,7 +311,9 @@
                       </div>
                       <div class="x_content">
 
-                          <a class="weatherwidget-io" href="https://forecast7.com/en/6d9379d86/colombo/" data-label_1="COLOMBO" data-label_2="WEATHER" data-font="Ubuntu" data-icons="Climacons Animated" data-theme="beige" data-basecolor="#ffffff" data-textcolor="#73879C" data-highcolor="#73879C" data-lowcolor="#73879C" data-suncolor="#73879C" data-mooncolor="#73879C" data-cloudcolor="#73879C" >COLOMBO WEATHER</a>
+
+
+                          <a class="weatherwidget-io" href="https://forecast7.com/en/6d9379d86/colombo/" data-label_1="COLOMBO" data-label_2="WEATHER" data-font="Ubuntu" data-icons="Climacons Animated" data-days="3" data-theme="beige" data-basecolor="#ffffff" data-textcolor="#73879C" data-highcolor="#73879C" data-lowcolor="#73879C" data-suncolor="#73879C" data-mooncolor="#73879C" data-cloudcolor="#73879C" >COLOMBO WEATHER</a>
                           <script>
                               !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
                           </script>
@@ -328,6 +326,7 @@
 
               </div>
               <!-- end of weather widget -->
+
 
 
           </div>
@@ -436,7 +435,41 @@
                     </div>
                 </div>
 
+                <div class="col-md-8 col-sm-8 col-xs-12">
+                    <div class="x_panel">
+                        <div class="x_title">
+                            <h2>Employee Allowance</h2>
+                            <ul class="nav navbar-right panel_toolbox">
+                                <li><a class="collapse-link"><i class="fa fa-chevron-up"></i></a>
+                                </li>
+                                <li><a class="close-link"><i class="fa fa-close"></i></a>
+                                </li>
+                            </ul>
+                            <div class="clearfix"></div>
+                        </div>
+                        <div class="x_content">
 
+                            <div class="table-responsive">
+                                <table class="table table-striped table-bordered" id="empAllowanceWidget">
+                                    <thead>
+                                    <tr>
+                                        <th>Photo</th>
+                                        <th width="20%;">Code</th>
+                                        <th>Name</th>
+                                        <th>Money (Rs)</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+
+                                    </tbody>
+
+                                </table>
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
 
 
 
@@ -532,10 +565,53 @@
     <!-- bootstrap-daterangepicker -->
     <script src="vendors/moment/min/moment.min.js"></script>
     <script src="vendors/bootstrap-daterangepicker/daterangepicker.js"></script>
+    <!-- semantic -->
+    <script src="vendors/semantic/semantic.min.js"></script>
 
     <!-- Custom Theme Scripts -->
     <script src="build/js/custom.min.js"></script>
     <script src="build/js/main.js"></script>
-    <script type="text/javascript" src="//100widgets.com/js_data.php?id=237"></script>
+    <script>
+        $('.ui.search')
+            .search({
+                type          : 'category',
+                minCharacters : 1,
+                apiSettings   : {
+                    onResponse: function(githubResponse) {
+                        var
+                            response = {
+                                results : {}
+                            }
+                        ;
+                        // translate GitHub API response to work with search
+                        $.each(githubResponse.items, function(index, item) {
+                            var
+                                language   = item.language || 'Unknown',
+                                maxResults = 8
+                            ;
+                            if(index >= maxResults) {
+                                return false;
+                            }
+                            // create new language category
+                            if(response.results[language] === undefined) {
+                                response.results[language] = {
+                                    name    : language,
+                                    results : []
+                                };
+                            }
+                            // add result to category
+                            response.results[language].results.push({
+                                title       : item.name,
+                                description : item.description,
+                                url         : item.html_url
+                            });
+                        });
+                        return response;
+                    },
+                    url: '//api.github.com/search/repositories?q={query}'
+                }
+            })
+        ;
+    </script>
   </body>
 </html>
