--- a/material.html
+++ b/material.html
@@ -47,11 +47,11 @@
                 <!-- menu profile quick info -->
                 <div class="profile clearfix">
                     <div class="profile_pic">
-                        <img src="images/img.jpg" alt="..." class="img-circle profile_img">
+                        <img src="build/images/admin_avatar.png" alt="..." class="img-circle profile_img">
                     </div>
                     <div class="profile_info">
                         <span>Welcome,</span>
-                        <h2>John Doe</h2>
+                        <h2>Admin</h2>
                     </div>
                 </div>
                 <!-- /menu profile quick info -->
@@ -69,6 +69,7 @@
                             <li><a href="items.html"><i class="fa fa-edit"></i>Items</a></li>
                             <li><a href="customer_registration.html"><i class="fa fa-edit"></i>Customer Registration</a></li>
                             <li><a href="employee_registration.html"><i class="fa fa-edit"></i>Employee Registration</a></li>
+                            <li><a href="employee_allowance.html"><i class="fa fa-edit"></i>Employee Allowance</a></li>
                         </ul>
                     </div>
                 </div>
@@ -104,7 +105,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li class="">
                             <a href="javascript:;" class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
-                                <img src="images/img.jpg" alt="">John Doe
+                                <img src="build/images/admin_avatar.png" alt="">Admin
                                 <span class=" fa fa-angle-down"></span>
                             </a>
                             <ul class="dropdown-menu dropdown-usermenu pull-right">
